--- a/index.html
+++ b/index.html
@@ -213,6 +213,58 @@
 
         </nav>
 
+        <!-- Carousel -->
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="ps-lg-12 py-lg-16 col-xxl-5 col-md-7 py-14 px-8 text-xs-center">
+
+                        <span class="badge text-bg-warning">Opening Sale Discount 50%</span>
+                        <h2 class="text-dark display-5 fw-bold mt-4">SuperMarket Daily Fresh Grocery</h2>
+                        <p class="lead">Introduced a new model for online grocery shopping
+                            and convenient home delivery. </p>
+
+                        <a href="#" class="btn btn-dark mt-3">Shop Now</a>
+                    </div>
+
+                    <img src="https://freshcart.codescandy.com/assets/images/slider/slide-1.jpg" class="d-block w-100"
+                        alt="...">
+
+
+
+
+                </div>
+                <div class="carousel-item">
+                    <img src="https://freshcart.codescandy.com/assets/images/slider/slider-2.jpg" class="d-block w-100"
+                        alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+
 
     </div>
 
