--- a/index.html
+++ b/index.html
@@ -212,63 +212,132 @@
             </div>
 
         </nav>
+    </div>
+    <!-- Carousel -->
 
-        <!-- Carousel -->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="ps-lg-12 py-lg-16 col-xxl-5 col-md-7 py-14 px-8 text-xs-center">
 
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="ps-lg-12 py-lg-16 col-xxl-5 col-md-7 py-14 px-8 text-xs-center">
+                    <span class="badge text-bg-warning">Opening Sale Discount 50%</span>
+                    <h2 class="text-dark display-5 fw-bold mt-4">SuperMarket Daily Fresh Grocery</h2>
+                    <p class="lead">Introduced a new model for online grocery shopping
+                        and convenient home delivery. </p>
 
-                        <span class="badge text-bg-warning">Opening Sale Discount 50%</span>
-                        <h2 class="text-dark display-5 fw-bold mt-4">SuperMarket Daily Fresh Grocery</h2>
-                        <p class="lead">Introduced a new model for online grocery shopping
-                            and convenient home delivery. </p>
-
-                        <a href="#" class="btn btn-dark mt-3">Shop Now</a>
-                    </div>
-
-                    <img src="https://freshcart.codescandy.com/assets/images/slider/slide-1.jpg" class="d-block w-100"
-                        alt="...">
-
-
-
-
+                    <a href="#" class="btn btn-dark mt-3">Shop Now</a>
                 </div>
-                <div class="carousel-item">
-                    <img src="https://freshcart.codescandy.com/assets/images/slider/slider-2.jpg" class="d-block w-100"
-                        alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+
+                <img src="https://freshcart.codescandy.com/assets/images/slider/slide-1.jpg" class="d-block w-100"
+                    alt="...">
+
+
+
+
+            </div>
+            <div class="carousel-item">
+                <img src="https://freshcart.codescandy.com/assets/images/slider/slider-2.jpg" class="d-block w-100"
+                    alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <!-- Category Section -->
+    <section class="mb-4 mt-4" style="margin-top:3em;">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 mb-5">
+                    <h3 class="mb-0">Featured Categories</h3>
+                </div>
+            </div>
+            <div class="card-group">
+                <div class="card">
+                    <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                <div class="card">
+                    <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This card has even longer content than the first to show that equal
+                            height action.</p>
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
 
+    </section>
+    <!-- Category Section Ends -->
+    <section class="mb-4 mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 mb-3">
+                    <div>
+                        <div class="rounded-3">
+                            <div class="rounded-3 px-4 py-5"
+                                style="background:url(https://freshcart.codescandy.com/assets/images/banner/grocery-banner.png) no-repeat;background-size:cover;background-position:center; ">
+                                <h3 class="fw-bold">Fruits & Vegetables</h3>
+                                <p class="mb-4">Get Up to 30% Off</p>
+                                <a href="" class="btn btn-dark">Shop Now</a>
+                            </div>
+                        </div>
 
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 mb-3">
+                    <div>
+                        <div class="rounded-3">
+                            <div class="rounded-3 px-4 py-5"
+                                style="background:url(https://freshcart.codescandy.com/assets/images/banner/grocery-banner.png) no-repeat;background-size:cover;background-position:center; ">
+                                <h3 class="fw-bold">Fruits & Vegetables</h3>
+                                <p class="mb-4">Get Up to 30% Off</p>
+                                <a href="" class="btn btn-dark">Shop Now</a>
+                            </div>
+                        </div>
 
+                    </div>
+                </div>
 
-    </div>
+            </div>
+        </div>
 
-
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
