--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>LaCesta</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -218,36 +220,27 @@
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <div class="ps-lg-12 py-lg-16 col-xxl-5 col-md-7 py-14 px-8 text-xs-center">
-
+                <img src="https://freshcart.codescandy.com/assets/images/slider/slide-1.jpg" class="d-block w-100"
+                    alt="...">
+                <div class="carousel-caption d-none d-md-block">
                     <span class="badge text-bg-warning">Opening Sale Discount 50%</span>
-                    <h2 class="text-dark display-5 fw-bold mt-4">SuperMarket Daily Fresh Grocery</h2>
+                    <h2 class="text-dark display-6 fw-bold mt-4">SuperMarket Daily Fresh Grocery</h2>
                     <p class="lead">Introduced a new model for online grocery shopping
                         and convenient home delivery. </p>
 
                     <a href="#" class="btn btn-dark mt-3">Shop Now</a>
                 </div>
-
-                <img src="https://freshcart.codescandy.com/assets/images/slider/slide-1.jpg" class="d-block w-100"
-                    alt="...">
-
-
-
-
             </div>
             <div class="carousel-item">
                 <img src="https://freshcart.codescandy.com/assets/images/slider/slider-2.jpg" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <span class="badge text-bg-warning">Opening Sale Discount 50%</span>
+                    <h2 class="text-dark display-6 fw-bold mt-4">SuperMarket Daily Fresh Grocery</h2>
+                    <p class="lead">Introduced a new model for online grocery shopping
+                        and convenient home delivery. </p>
+
+                    <a href="#" class="btn btn-dark mt-3">Shop Now</a>
                 </div>
             </div>
         </div>
@@ -262,6 +255,7 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+
     <!-- Category Section -->
     <section class="mb-4 mt-4" style="margin-top:3em;">
         <div class="container">
@@ -1231,11 +1225,167 @@
                         </div>
                     </div>
                 </div>
+                <div class="col">
+                    <div class="card card-product">
+                        <div class="card-body">
+                            <div class="text-center position-relatie">
+                                <a href="#">
+                                    <img src="https://freshcart.codescandy.com/assets/images/products/product-img-11.jpg"
+                                        alt="" class="mb-3 img-fluid">
+                                </a>
+
+                            </div>
+                            <div class="text-small mb-1">
+                                <a href="#" class="text-decoration-none text-muted">
+                                    <small>Tea,Coffee & Drinks</small>
+                                </a>
+                            </div>
+                            <h2 class="fs-6">Roast Ground Coffee</h2>
+                            <div class="d-flex justify-content-between align-item-center mt-3">
+                                <div>
+                                    <span>$13</span>
+                                    <span class="text-muted text-decoration-line-through">$18</span>
+                                </div>
+                                <div>
+                                    <small class="text-warning">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                    </small>
+                                </div>
+                                <span class="text-muted">4.5</span>
+
+                            </div>
+                            <div class="d-grid mt-2">
+                                <a href="#" class="btn btn-success">Add to card</a>
+                            </div>
+                            <div class="d-flex justify-content-start text-center mt-3">
+                                <div class="col">
+                                    <div class="text-dark">58</div>
+                                    <div class="text-muted">Days</div>
+                                </div>
+                                <div class="col">
+                                    <div class="text-dark">58</div>
+                                    <div class="text-muted">Days</div>
+                                </div>
+                                <div class="col">
+                                    <div class="text-dark">58</div>
+                                    <div class="text-muted">Days</div>
+                                </div>
+                                <div class="col">
+                                    <div class="text-dark">58</div>
+                                    <div class="text-muted">Days</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-product">
+                        <div class="card-body">
+                            <div class="text-center position-relatie">
+                                <a href="#">
+                                    <img src="https://freshcart.codescandy.com/assets/images/products/product-img-11.jpg"
+                                        alt="" class="mb-3 img-fluid">
+                                </a>
+
+                            </div>
+                            <div class="text-small mb-1">
+                                <a href="#" class="text-decoration-none text-muted">
+                                    <small>Tea,Coffee & Drinks</small>
+                                </a>
+                            </div>
+                            <h2 class="fs-6">Roast Ground Coffee</h2>
+                            <div class="d-flex justify-content-between align-item-center mt-3">
+                                <div>
+                                    <span>$13</span>
+                                    <span class="text-muted text-decoration-line-through">$18</span>
+                                </div>
+                                <div>
+                                    <small class="text-warning">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg>
+                                    </small>
+                                </div>
+                                <span class="text-muted">4.5</span>
+
+                            </div>
+                            <div class="d-grid mt-2">
+                                <a href="#" class="btn btn-success">Add to card</a>
+                            </div>
+                            <div class="d-flex justify-content-start text-center mt-3">
+                                <div class="col">
+                                    <div class="text-dark">58</div>
+                                    <div class="text-muted">Days</div>
+                                </div>
+                                <div class="col">
+                                    <div class="text-dark">58</div>
+                                    <div class="text-muted">Days</div>
+                                </div>
+                                <div class="col">
+                                    <div class="text-dark">58</div>
+                                    <div class="text-muted">Days</div>
+                                </div>
+                                <div class="col">
+                                    <div class="text-dark">58</div>
+                                    <div class="text-muted">Days</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </div>
     </section>
     <!-- Daily Best Sells End -->
+
 
 
 
