--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </nav>
 
     <!-- Carousel -->
-    <section class="mt-5">
+    <section class="mt-5 mb-5">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -258,33 +258,52 @@
                     <h3 class="mb-0">Featured Categories</h3>
                 </div>
             </div>
-            <div class="card-group">
-                <div class="card">
-                    <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+            <div class="row row-cols-2 row-cols-md-4 g-4">
+                <div class="col">
+                    <div class="card border-dark mb-3 h-100">
+                        <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="text-small text-muted text-center">
+                                <small>Snack & Muchies</small>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.</p>
+
+                <div class="col">
+                    <div class="card border-dark mb-3 h-100">
+                        <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="text-small text-muted text-center">
+                                <small>Snack & Muchies</small>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height action.</p>
+
+                <div class="col">
+                    <div class="card border-dark mb-3 h-100">
+                        <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="text-small text-muted text-center">
+                                <small>Snack & Muchies</small>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <div class="card border-dark mb-3 h-100">
+                        <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="text-small text-muted text-center">
+                                <small>Snack & Muchies</small>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
