--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
 
             <!-- Search Form -->
-            <form action="#" class="search-header d-md-none d-lg-flex">
+            <form action="#" class="search-header d-none d-md-none d-lg-flex">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search for products..">
                     <span class="input-group-text">
@@ -203,7 +203,7 @@
 
             <!-- Location Button -->
 
-            <button class="btn btn-light btn-outline-secondary d-md-none d-lg-flex">
+            <button class="btn btn-light btn-outline-secondary d-none d-md-none d-lg-flex">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt"
                     viewBox="0 0 16 16">
                     <path
@@ -213,7 +213,7 @@
                 <span>Location</span>
             </button>
             <!-- icon group -->
-            <ul class="list-group list-group-horizontal d-md-none d-lg-flex">
+            <ul class="list-group list-group-horizontal d-none d-md-none d-lg-flex">
                 <li class="list-group-item">
                     <a href="">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -1628,7 +1628,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-7">
-                        <ul class="list-inline mb-0 text-lg-end text-center">
+                        <ul class="list-inline mb-0 text-lg-end text-left d-flex">
                             <li class="list-inline-item mb-2 mb-md-0 text-dark">Get deliveries with FreshCart</li>
                             <li class="list-inline-item ms-4">
                                 <a href="#">
@@ -1636,7 +1636,7 @@
                                         alt="" style="width:140px">
                                 </a>
                             </li>
-                            <li class="list-inline-item ms-4">
+                            <li class="list-inline-item ms-4 ">
                                 <a href="#">
                                     <img src="https://freshcart.codescandy.com/assets/images/appbutton/appstore-btn.svg"
                                         alt="" style="width:140px">
