--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+---
+layout: none
+description: Today's todo-list
+permalink: /bootstrap
+---
+
+
 <!DOCTYPE html>
 <html>
 
@@ -8,7 +15,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="bootstrap-styles.css">
 </head>
 
 <body>
